--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -14,6 +14,7 @@
       <tr>
         <td><%= teacher.name %></td>
         <td><%= teacher.identity %></td>
+	<td><%= teacher.active_teachers_subjects %></td>
         <td><%= link_to 'Show', teacher %></td>
         <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
         <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
