dont remember wich change

--- a/app/views/teachers/_form.html.erb
+++ b/app/views/teachers/_form.html.erb
@@ -20,7 +20,7 @@
     <%= f.label :identity %><br>
     <%= f.text_field :identity %>
   </div>
-
+<h1> Subject </h1>
  <div class ="field_list">
   <%= f.fields_for :subjects do |sub| %>
     <div class="field">
